# model

./: .gitignore  README.txt
model/acs_model_for_experiments/: CMakeLists.txt  DC_engine_tester.h  automated_control_system.cpp  automated_control_system.h  automated_control_system_element_interface.cpp  automated_control_system_element_interface.h  chartwidgetfactory.cpp  chartwidgetfactory.h  container_analyzer.cpp  container_analyzer.h  controlled_process.cpp  controlled_process.h  controlled_process_bad.h  dc_source.cpp  dc_source.h  default_configuration_setter.cpp  default_configuration_setter.h  dialog.ui  experiment_executor.cpp  experiment_executor.h  fitness_function.cpp  generative_algorithm.h  gradient_method.h  main.cpp  mainwindow.cpp  mainwindow.h  reference_signal_definder_static.cpp  reference_signal_definder_static.h  registrator.cpp  registrator.h  regulator.cpp  regulator.h  regulator_tuner.cpp  regulator_tuner.h  regulator_tuner_prerefactored.cpp  regulator_tuner_prerefactored.h  timerapp.cpp  timerapp.h  ui_dialog.h  unit_test.cpp
model/acs_model_for_experiments/tkachpavlo2001lib/: myExeption.hpp  myRand.h  tkachpavlo2001lib.h  tkachpavlo2001lib.hpp
model/build-acs_model_for_experiments-Desktop-Debug/: Evaluation_report.txt
model/build-acs_model_for_experiments-Desktop-Release/: ACS_MODEL  CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
model/build-acs_model_for_experiments-Desktop-Release/.cmake/api/v1/reply/: cache-v2-1c779217ad08309eb900.json  cmakeFiles-v1-dbe0c9bc7bf1149ef3b4.json  codemodel-v2-476d439512f933d4672b.json  index-2024-12-31T07-11-33-0524.json  target-ACS_MODEL-Release-fec350f783c69112bd5c.json  target-ACS_MODEL_autogen-Release-f0c7a26c0ca25d7d5d50.json
model/build-acs_model_for_experiments-Desktop-Release/.qt/: QtDeploySupport.cmake
model/build-acs_model_for_experiments-Desktop-Release/.qtc_clangd/: compile_commands.json
model/build-acs_model_for_experiments-Desktop-Release/.qtc_clangd/.cache/clangd/index/: QAbstractAxis.01D5135D68345758.idx  QAbstractSeries.51CB3A633FD50E70.idx  QBoxLayout.A6A9D9D0CFA0C5A3.idx  QBrush.9E760787A721A83B.idx  QChart.ADADEBEB9AC15D74.idx  QChartGlobal.EC8EBF31C282C749.idx  QChartView.E359E029DEB38C38.idx  QDebug.550E7407D56CAD75.idx  QEvent.244F33D88649CF06.idx  QFont.249C1A5740288092.idx  QGraphicsView.5BF68B61738DDE17.idx  QGraphicsWidget.FD8D76A08A7A7458.idx  QHBoxLayout.FAD22B24187FDF61.idx  QHeaderView.DD02DA4678AD78AA.idx  QImage.7A99A9AA46A8DC78.idx  QLCDNumber.D90CCE3B953E3765.idx  QLegend.C98F8DFD994F8531.idx  QLineEdit.717F39015DC002D5.idx  QLineSeries.E663E4BEC81816BD.idx  QList.87A03CDA97E914A5.idx  QMainWindow.8E5A3D08595948A5.idx  QMargins.B6472018AFBA8468.idx  QMessageBox.1C647B46A4C501AC.idx  QObject.54A4F99B5A58FDDE.idx  QPen.3FCD8C72096DB569.idx  QPointF.D055D9B9C3EEE7B3.idx  QPushButton.0C880E87E8437EF6.idx  QRect.C9C340B633906929.idx  QRegularExpression.4C895C439D4AA494.idx  QRegularExpressionValidator.748EA17870C6A30B.idx  QScatterSeries.B2FF91EB8087C6D4.idx  QSize.BAB35BC5366B1080.idx  QSizeF.8791CB49AED4962D.idx  QSlider.E02DCE8268BBC683.idx  QSplineSeries.AC5C732AB23BA0B7.idx  QTabWidget.7BE5620D90558319.idx  QTableWidget.67B4968F0DFD140F.idx  QTableWidgetItem.C23FB3B0E54EA6D1.idx  QTextEdit.8FC000FDCDC69B8B.idx  QThread.BAEFCD65FF3AEEFF.idx  (+222 more)
model/build-acs_model_for_experiments-Desktop-Release/ACS_MODEL_autogen/: moc_predefs.h  mocs_compilation.cpp
model/build-acs_model_for_experiments-Desktop-Release/ACS_MODEL_autogen/EWIEGA46WW/: moc_chartwidgetfactory.cpp  moc_chartwidgetfactory.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_timerapp.cpp  moc_timerapp.cpp.d
tests/DC_engine_tests/: DC_engine_tester_test_1  DC_engine_tester_test_2  DC_engine_tester_test_2_1
tests/Папка/: .~lock.to_visualize (копия).ods#  .~lock.Без имени 1.ods#  _Template.ods  test_2_1_data.txt  test_2_1_data_02ofLoad.txt  to_visualize (копия).ods  to_visualize_02ofLoad.ods  Без имени 1.ods
